virt01/manual/torrent/lidarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: torrent,music
        backup.velero.io/backup-volumes: lidarr-pv        
      labels:
        app: lidarr
    spec:
      serviceAccountName: lidarr-sa
      containers:
        - name: lidarr
          image: linuxserver/lidarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8686
              name: lidarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: lidarr-pv
              mountPath: /config
            - name: music
              mountPath: /music
            - name: torrent
              mountPath: /data
      volumes:
        - name: lidarr-pv
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: music
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/ssd01/Music
#            server: 10.0.0.100
        - name: torrent
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/hdd01/torrent
#            server: 10.0.0.100
