virt01/manual/torrent/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-svc
  labels:
    app: lidarr
spec:
  ports:
    - port: 8686
      protocol: TCP
      name: lidarr-svc-port
  selector:
    app: lidarr
  sessionAffinity: None
